# hegel-ocaml

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  dune-project  hegel.opam  justfile  ppx_hegel.opam  ppx_hegel_compat.opam  ppx_hegel_generator.opam  ppx_hegel_test.opam
.claude/: CLAUDE.md
.claude/skills/changelog/: SKILL.md
.claude/skills/coverage/: SKILL.md
.claude/skills/coverage/references/: patterns.md
.claude/skills/self-review/: SKILL.md
.github/actions/install-tools/: action.yml
.github/actions/setup-opam/: action.yml
.github/release-files/: prebuilt.dune
.github/scripts/: bump_hegel_core.py  bump_hegel_rust.py  release.py
.github/workflows/: bump-hegel-core.yml  bump-hegel-rust.yml  check.yml  ci-oxcaml.yml  ci.yml  conformance.yml  docs.yml  lint.yml  opam-release.yml  test.yml
.hegelator/: stages.jsonl
.hegelator/progress/: conformance-tests.json  documentation-polish.json  good-taste-audit.json  language-specific-features.json
_build/: .db  .digest-db  log
_build/default/: META.hegel  hegel.dune-package  hegel.install  hegel.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/91be16f8c7b473bc6bcd0e4210417372/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/_doc/_html/: index.html
_build/default/_doc/_html/hegel/: index.html
_build/default/_doc/_mlds/hegel/: index.mld
_build/default/_doc/_odocls/hegel/: hegel.odocl  page-index.odocl
_build/default/lib/: cbor_helpers.pp.ml  client.pp.ml  connection.pp.ml  generators.pp.ml  hegel.cma  hegel.cmxa  hegel.cmxs  hegel.ml  hegel.pp.ml  hegel__.ml-gen  protocol.pp.ml  session.ml  session.pp.ml
_build/default/lib/.formatted/: cbor_helpers.ml  connection.ml  dune  generators.ml  hegel.ml  protocol.ml
_build/default/lib/.hegel.objs/: hegel.impl.all-deps  hegel.impl.d  hegel__Cbor_helpers.impl.d  hegel__Client.impl.all-deps  hegel__Client.impl.d  hegel__Connection.impl.all-deps  hegel__Connection.impl.d  hegel__Generators.impl.all-deps  hegel__Generators.impl.d  hegel__Protocol.impl.d  hegel__Session.impl.d
_build/default/lib/.hegel.objs/byte/: hegel.cmi  hegel.cmo  hegel.cmt  hegel.odoc  hegel__.cmi  hegel__.cmo  hegel__.cmt  hegel__.odoc  hegel__Cbor_helpers.cmi  hegel__Cbor_helpers.cmo  hegel__Cbor_helpers.cmt  hegel__Cbor_helpers.odoc  hegel__Client.cmi  hegel__Client.cmo  hegel__Client.cmt  hegel__Client.odoc  (+16 more)
_build/default/lib/.merlin-conf/: lib-hegel
_build/default/test/: bisect150439541.coverage  bisect170286869.coverage  bisect176291372.coverage  bisect307480821.coverage  bisect424362696.coverage  bisect431158041.coverage  bisect50155063.coverage  bisect801958570.coverage  bisect917875825.coverage  dune  test_hegel.ml
_build/default/test/.formatted/: dune  test_cbor_helpers.ml  test_generators.ml  test_hegel.ml  test_protocol.ml
_build/default/test/.merlin-conf/: exe-test_hegel
_build/default/test/.test_hegel.eobjs/: dune__exe.ml-gen  dune__exe__Test_cbor_helpers.impl.d  dune__exe__Test_client.impl.d  dune__exe__Test_connection.impl.d  dune__exe__Test_generators.impl.d  dune__exe__Test_hegel.impl.all-deps  dune__exe__Test_hegel.impl.d  dune__exe__Test_hegel.intf.d  dune__exe__Test_protocol.impl.d  dune__exe__Test_showcase.impl.d
_coverage/: index.html
_coverage/lib/: cbor_helpers.ml.html  client.ml.html  connection.ml.html  hegel.ml.html  protocol.ml.html  session.ml.html
conformance/: dune  json_params.ml  test_binary.ml  test_booleans.ml  test_floats.ml  test_hashmaps.ml  test_integers.ml  test_lists.ml  test_one_of.ml  test_origin_deduplication.ml  test_sampled_from.ml  test_text.ml
docs/: getting-started.md
examples/: basic_properties.ml  collections.ml  derived_types.ml  dune  real_world.ml
lib/: antithesis.ml  antithesis.mli  blobs.ml  blobs.mli  cbor.ml  cbor.mli  cbor_helpers.ml  cbor_helpers.mli  client.ml  client.mli  condition_timedwait_stubs.c  conformance.ml  conformance.mli  connection.ml  connection.mli  crc32.ml  derive.ml  derive.mli  dune  gen.ml  gen.mli  generators.ml  generators.mli  generators_collections.ml  generators_combinators.ml  generators_core.ml  generators_primitives.ml  hegel.ml  hegel.mli  internal.ml  internal.mli  protocol.ml  protocol.mli  runner.ml  runner.mli  session.ml  session.mli  state.ml  stateful.ml  stateful.mli
lib/cbor/: CBOR.ml  CBOR.mli  cbor.ml  cbor.mli  dune
lib/crc32/: LICENSE  crc32.ml  crc32.mli  dune
lib/ffi/: dune  ffi.ml  ffi.mli  hegel_ffi.ml  hegel_ffi.mli  loader.ml
lib/test_runtime/: dune  hegel_test_runtime.ml  hegel_test_runtime.mli
lib/test_runtime_expect/: dune  hegel_test_runtime_expect.ml  hegel_test_runtime_expect.mli
nix/: flake.nix
ppx/: dune  ppx_compat.mli  ppx_compat_oxcaml.ml  ppx_compat_post-53.ml  ppx_compat_standard.ml  ppx_hegel.ml  ppx_hegel_generator.ml  ppx_hegel_test.ml
ppx/test/: dune  test_hegel_test_runtime.ml  test_ppx_hegel_test.ml
ppx/test/expect_tests/: dune  test_draw_printing.ml  test_failure_blobs_record.ml  test_note_verbosity.ml
scripts/: check-coverage.py  update-checksums.py
test/: dune  mock_hegel.ml  test_antithesis.ml  test_blobs.ml  test_blobs_record.ml  test_cbor_helpers.ml  test_cbor_vectors.ml  test_client.ml  test_conformance_helpers.ml  test_connection.ml  test_coverage.ml  test_crc32.ml  test_derive.ml  test_docs.ml  test_draw_printing.ml  test_expect_backend_smoke.ml  test_failing.ml  test_failure_blobs_record.ml  test_generators.ml  test_generators_collections.ml  test_generators_combinators.ml  test_generators_core.ml  test_generators_primitives.ml  test_generators_schema.ml  test_hegel.ml  test_hegel_test_runtime.ml  test_helpers.ml  test_ppx_derive.ml  test_ppx_hegel_test.ml  test_protocol.ml  test_showcase.ml  test_single_test_case.ml  test_stateful.ml  unsetenv_stubs.c
test/conformance/: test_conformance.py
test/expect_tests/: dune  test_draw_printing.ml  test_failure_blobs_record.ml  test_note_verbosity.ml
test/runtime_exit_demo/: dune  runtime_exit_demo.ml
test_ppx/: dune  test_ppx_hegel.ml
test_unit/: dune  test_unit.ml
tests/conformance/: test_conformance.py
(+256 files in other folders)
