(library
 (name hegel)
 (public_name hegel)
 (libraries core core_unix cbor checkseum.c threads.posix)
 (private_modules
  generators_core
  generators_primitives
  generators_collections
  generators_combinators)
 (foreign_stubs
  (language c)
  (names condition_timedwait_stubs))
 (c_library_flags -lpthread)
 (instrumentation
  (backend bisect_ppx)))
