(library
 (name ppx_hegel_generator)
 (public_name ppx_hegel_generator)
 (kind ppx_deriver)
 (libraries ppxlib)
 (modules ppx_hegel_generator ppx_compat)
 (preprocess
  (pps ppx_js_style ppxlib.metaquot)))

(library
 (name ppx_hegel_test)
 (public_name ppx_hegel_test)
 (kind ppx_rewriter)
 (libraries ppxlib)
 (modules ppx_hegel_test)
 (ppx_runtime_libraries hegel_test_runtime)
 (preprocess
  (pps ppx_js_style ppxlib.metaquot))
 (inline_tests.backend
  (runner_libraries hegel_test_runtime)
  (generate_runner
   (echo "let () = Hegel_test_runtime.test_main ();;"))))

; Select the ppx_compat implementation based on whether we are building on
; OxCaml (ppxlib AST has labeled tuples and constructor modalities) or
; standard OCaml.

(rule
 (target ppx_compat.ml)
 (action
  (with-stdout-to
   %{target}
   (bash
    "case '%{ocaml_version}' in *+ox*) cat %{dep:ppx_compat_oxcaml.ml};; *) cat %{dep:ppx_compat_standard.ml};; esac"))))
