; Internal OCaml/OxCaml AST compatibility shim shared by the deriver and
; the test rewriter. The accompanying [.mli] is checked in; the [.ml] is
; selected by the rule at the bottom of this file based on the compiler
; flavor.

(library
 (name ppx_compat)
 (public_name ppx_hegel_compat)
 (libraries ppxlib)
 (modules ppx_compat))

(library
 (name ppx_hegel_generator)
 (public_name ppx_hegel_generator)
 (kind ppx_deriver)
 (libraries ppxlib ppx_hegel_compat ppx_sexp_conv.expander)
 (modules ppx_hegel_generator)
 (preprocess
  (pps ppx_js_style ppxlib.metaquot)))

(library
 (name ppx_hegel_test)
 (public_name ppx_hegel_test)
 (kind ppx_rewriter)
 (libraries ppxlib ppx_hegel_compat)
 (modules ppx_hegel_test)
 (ppx_runtime_libraries hegel.test_runtime)
 (preprocess
  (pps ppx_js_style ppxlib.metaquot))
 (inline_tests.backend
  (runner_libraries hegel.test_runtime)
  (generate_runner
   (echo "let () = Hegel_test_runtime.test_main ();;"))))

; Select the ppx_compat implementation based on whether we are building on
; OxCaml (ppxlib AST has labeled tuples and constructor modalities) or
; standard OCaml.

(rule
 (target ppx_compat.ml)
 (action
  (with-stdout-to
   %{target}
   (bash
    "case '%{ocaml_version}' in *+ox*) cat %{dep:ppx_compat_oxcaml.ml};; *) cat %{dep:ppx_compat_standard.ml};; esac"))))
