(rule
 (target cbor_appendix_a_data.ml)
 (deps cbor_appendix_a.json)
 (action
  (with-stdout-to
   %{target}
   (progn
    (echo "let json = {json|")
    (cat %{deps})
    (echo "|json}\n")))))

(test
 (name test_hegel)
 (modules
  test_hegel
  test_helpers
  test_protocol
  test_crc32
  test_cbor_helpers
  test_cbor_vectors
  cbor_appendix_a_data
  test_connection
  test_client
  test_generators_core
  test_generators_primitives
  test_generators_collections
  test_generators_combinators
  test_conformance_helpers
  test_derive
  test_stateful
  test_single_test_case
  test_antithesis
  test_hegel_test_runtime
  test_blobs)
 (libraries
  hegel
  hegel_test_runtime
  alcotest
  core
  core_unix
  threads.posix
  crc32
  yojson
  cbor)
 (preprocess
  (pps ppx_js_style ppx_hegel_test -- -allow-unannotated-ignores))
 (foreign_stubs
  (language c)
  (names unsetenv_stubs)))

(test
 (name test_ppx_derive)
 (modules test_ppx_derive)
 (libraries hegel hegel_test_runtime alcotest core core_unix threads.posix)
 (preprocess
  (pps
   ppx_js_style
   ppx_hegel_generator
   ppx_hegel_test
   --
   -allow-unannotated-ignores)))

(test
 (name test_ppx_hegel_test)
 (modules test_ppx_hegel_test)
 (libraries hegel alcotest core core_unix threads.posix yojson)
 (preprocess
  (pps ppx_js_style ppx_hegel_test -- -allow-unannotated-ignores)))

; Smoke test for the opt-in ppx_hegel_test.expect backend. Lives in its
; own library stanza because (inline_tests ...) requires a library, not a
; test executable. The library carries no public modules and is exercised
; entirely through `dune runtest`.

(library
 (name test_expect_backend_smoke)
 (modules test_expect_backend_smoke)
 (libraries hegel)
 (inline_tests
  (backend ppx_hegel_test.expect))
 (preprocess
  (pps ppx_js_style ppx_hegel_test -- -allow-unannotated-ignores)))
