(rule
 (target cbor_appendix_a_data.ml)
 (deps cbor_appendix_a.json)
 (action
  (with-stdout-to
   %{target}
   (progn
    (echo "let json = {json|")
    (cat %{deps})
    (echo "|json}\n")))))

(test
 (name test_hegel)
 (modules
  test_hegel
  test_helpers
  test_cbor_helpers
  test_cbor_vectors
  cbor_appendix_a_data
  test_client
  test_generators_core
  test_generators_primitives
  test_generators_collections
  test_generators_combinators
  test_generators_schema
  test_derive
  test_stateful
  test_single_test_case
  test_antithesis
  test_hegel_test_runtime)
 (libraries
  hegel
  hegel_test_runtime
  alcotest
  core
  core_unix
  threads.posix
  yojson
  cbor)
 (preprocess
  (pps ppx_js_style ppx_hegel_test -- -allow-unannotated-ignores))
 (foreign_stubs
  (language c)
  (names unsetenv_stubs)))

(test
 (name test_ppx_derive)
 (modules test_ppx_derive)
 (libraries hegel hegel_test_runtime alcotest core core_unix threads.posix)
 (preprocess
  (pps
   ppx_js_style
   ppx_hegel_generator
   ppx_hegel_test
   --
   -allow-unannotated-ignores)))

(test
 (name test_ppx_hegel_test)
 (modules test_ppx_hegel_test)
 (libraries hegel alcotest core core_unix threads.posix yojson)
 (preprocess
  (pps ppx_js_style ppx_hegel_test -- -allow-unannotated-ignores)))

; Expect tests for Phase 1 draw-value printing. Uses [let%expect_test] so the
; final-replay draw/note output (stderr) can be captured and snapshotted.

(library
 (name test_draw_printing)
 (modules test_draw_printing)
 (libraries hegel core core_unix)
 (inline_tests
  (backend ppx_inline_test))
 (preprocess
  (pps ppx_expect)))
