(rule
 (target cbor_appendix_a_data.ml)
 (deps cbor_appendix_a.json)
 (action
  (with-stdout-to
   %{target}
   (progn
    (echo "let json = {json|")
    (cat %{deps})
    (echo "|json}\n")))))

(test
 (name test_hegel)
 (package hegel)
 (modules
  test_hegel
  test_helpers
  test_cbor_helpers
  test_cbor_vectors
  cbor_appendix_a_data
  test_client
  test_generators_core
  test_generators_primitives
  test_generators_collections
  test_generators_combinators
  test_generators_schema
  test_derive
  test_stateful
  test_single_test_case
  test_antithesis)
 (libraries hegel alcotest core core_unix threads.posix yojson cbor)
 (preprocess
  (pps ppx_js_style -- -allow-unannotated-ignores))
 (foreign_stubs
  (language c)
  (names unsetenv_stubs)))
