; Low-level ctypes bindings to libhegel. Deliberately NOT instrumented with
; bisect_ppx: this is mechanical FFI marshalling whose error branches are not
; meaningfully coverable, so it stays out of the 100%-coverage gate (the same
; exclusion the PPX libraries rely on). All decision logic lives in the
; instrumented `hegel` library.

(library
 (name hegel_ffi)
 (public_name hegel.ffi)
 (libraries ctypes ctypes-foreign unix dune-site))

; Generates the `Hegel_sites` module exposing `Hegel_sites.Sites.libhegel`: the
; directories of the `libhegel` site. Release tarballs install the matching
; prebuilt libhegel there (see prebuilt/dune, added to the tarball by CI), so
; the loader finds it without a download. In a dev checkout the site is empty
; and the loader falls back to the sibling checkout / download.

(generate_sites_module
 (module hegel_sites)
 (sites hegel))
