; ppx_expect tests. In their own directory so the coverage recipe can run just
; these inline tests via [dune runtest test/expect_tests] without re-running the
; Alcotest suites.

(library
 (name expect_tests)
 (enabled_if
  (<> %{profile} release))
 (libraries hegel hegel_test_runtime core core_unix)
 (inline_tests
  (backend ppx_inline_test))
 (preprocess
  (pps ppx_expect ppx_sexp_conv ppx_hegel_generator ppx_hegel_test)))
